--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   lottie: ^3.3.1
   smooth_page_indicator: ^1.1.0
   flutter_native_splash: ^2.4.4
+  share_plus: 7.0.2
+  url_launcher: ^6.1.10
+
+
 
 dev_dependencies:
   flutter_lints: ^5.0.0
