--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   lottie: ^3.3.1
   smooth_page_indicator: ^1.1.0
   flutter_native_splash: ^2.4.4
+  modal_bottom_sheet: ^3.0.0
+  font_awesome_flutter: ^10.8.0
+  awesome_dialog: ^3.2.1
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
