--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,10 @@ dependencies:
 
 
 
+  modal_bottom_sheet: ^3.0.0
+  font_awesome_flutter: ^10.8.0
+  awesome_dialog: ^3.2.1
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
