--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   awesome_dialog: ^3.2.1
   flutter_rating_bar: ^4.0.1
+  flutter_stripe: 10.1.1 
 
 dev_dependencies:
   flutter_lints: ^5.0.0
